fix scrollBar

--- a/static/components/k-scroll/k-scroll.css
+++ b/static/components/k-scroll/k-scroll.css
@@ -6,7 +6,7 @@
   right: 0;
   top: 0;
   width: 1rem;
-  height: 20%;
+  height: 0;
   -moz-box-sizing:border-box;
   -webkit-box-sizing:border-box;
   box-sizing:border-box
